# IndieStudio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  bomberman.cbp  bomberman.desktop  cmake_install.cmake  state_machine.cpp  state_machine.hpp
Super Boo/Fbx/: S_Boo.fbx
assets/: bomberman.desktop  icon.rc
assets/font/: zelda.xml
assets/models/block/: Pot.dae
assets/models/bomb/: bomb.mtl
assets/models/explosion/: explode.mtl
assets/models/map/: map.mtl
assets/models/player/: link-happy.ms3d  link-idle.ms3d  link-run.ms3d
assets/models/pot/: Pot.dae
cmake/: FindIrrlicht.cmake
include/: AState.hpp  EntityFactory.hpp  GameManager.hpp  IEntity.hpp  PathManager.hpp  Save.hpp  Singletons.hpp  SplashState.hpp  StateMachine.hpp  Time.hpp
include/Abstracts/: ABombDropper.hpp  AMenuSound.hpp  AState.hpp  AStateShare.hpp
include/Game/: AController.hpp  AEntity.hpp  AMovable.hpp  ATrackable.hpp  BIAController.hpp  BKeyboardController.hpp  Controllable.hpp  ControllerFactory.hpp  EntitiesMap.hpp  EntityFactory.hpp  IEntity.hpp  Movable.hpp  SaveManager.hpp  SphericalCoordinate.hpp  Traveling.hpp
include/Game/Bonus/: IncorporelBonus.hpp  InvertBonus.hpp  ResetFireRangeBonus.hpp  UpBombBonus.hpp  UpFireBonus.hpp  UpSpeedBonus.hpp
include/Game/Entities/: AAnimatedEntity.cpp  AAnimatedEntity.hpp  ABonusEntity.hpp  BlockEntity.hpp  BombEntity.hpp  BonusEntity.hpp  FireEntity.hpp  PlayerEntity.hpp  PotEntity.hpp
include/Game/Entities/Bonus/: InvertBonus.hpp  ResetFireRangeBonus.hpp  UpBombBonus.hpp  UpFireBonus.hpp
include/Singletons/: AssetsPool.hpp  EventReceiver.hpp  GameManager.hpp  IrrManager.hpp  StateMachine.hpp
include/States/: AIChooseState.hpp  BackgroundState.hpp  EndGameState.hpp  GameState.hpp  LoadState.hpp  MenuState.hpp  PauseState.hpp  PodiumState.hpp  SaveState.hpp  SettingsState.hpp  SplashState.hpp  TransitionEndGameState.hpp  TransitionToGameState.hpp  TransitionToMenuState.hpp
libs/irrlicht/lib/Win64-visualStudio/: Irrlicht.exp  Irrlicht.lib
rahmeh/: Makefile  main.cpp
src/: AState.cpp  EntityFactory.cpp  EntityFactory.hpp  EntityOperator.cpp  GameManager.cpp  IEntity.hpp  PathManager.cpp  Save.cpp  StateMachine.cpp  Time.cpp  entityOperator.cpp  main.cpp  main.cppback  prout.cpp
src/Abstracts/: ABombDropper.cpp  AMenuSound.cpp  AState.cpp  AStateShare.cpp
src/Game/: AController.cpp  AEntity.cpp  BIAController.cpp  BKeyboardController.cpp  Controllable.cpp  ControllerFactory.cpp  EntitiesMap.cpp  EntityFactory.cpp  EntityOperator.cpp  SaveManager.cpp  SphericalCoordinate.cpp  Traveling.cpp  Traveling.hpp
src/Game/Entities/: AAnimatedEntity.cpp  ABonusEntity.cpp  BlockEntity.cpp  BombEntity.cpp  BombEntity.hpp  BonusEntity.cpp  BonusEntity.hpp  FireEntity.cpp  PlayerEntity.cpp  PlayerEntity.hpp  PotEntity.cpp
src/Game/Entities/Bonus/: IncorporelBonus.cpp  InvertBonus.cpp  ResetFireRangeBonus.cpp  UpBombBonus.cpp  UpFireBonus.cpp  UpSpeedBonus.cpp
src/Singletons/: AssetsPool.cpp  EventReceiver.cpp  GameManager.cpp  IrrManager.cpp  StateMachine.cpp
src/States/: AIChooseState.cpp  AState.cpp  BackgroundState.cpp  EndGameState.cpp  GameState.cpp  LoadState.cpp  MenuState.cpp  PauseState.cpp  PodiumState.cpp  SaveState.cpp  SettingsState.cpp  SplashState.cpp  TransitionEndGameState.cpp  TransitionToGameState.cpp  TransitionToMenuState.cpp
src/entity/: AMovable.hpp
